<resources>
    <string name="app_name">MarketApplication</string>
    <string name="sign_in">Вхід</string>
    <string name="number">+380</string>
    <string name="verification">Верифікувати</string>
    <string name="next">Далі</string>
    <string name="first_name">Ім\'я</string>
    <string name="last_name">Прізвище</string>
    <string name="city">Місто</string>
    <string name="done">Готово</string>
    <string name="foot_size">Розміри стопи:</string>
    <string name="material">Матеріал:</string>
    <string name="size">EU</string>
    <string name="long_size">Довжина/см</string>
    <string name="width_size">Ширина/см</string>
    <string name="contact_number">Контактний номер</string>
    <string name="exit">Вийти</string>
    <string name="sales_manager">Продавець</string>
    <string name="add_photo">Додати фото</string>
    <string name="save">Зберегти</string>
    <string name="model">Модель</string>
    <string name="description">Опис</string>
    <string name="price">Ціна</string>
    <string name="validation_error">Додайте хоча б одне фото </string>
    <string name="throw_off">Скинути</string>
    <string name="apply">Застосувати</string>
    <string name="active">Активні</string>
    <string name="archive">Архів</string>
    <string name="delete_ads">Видалити оголошення</string>
    <string name="dialog_title">Ви впевнені, що хочете видалити?</string>
    <string name="no">Ні</string>
    <string name="yes">Так</string>


</resources>