<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/bg_main"
    tools:context=".view.login.DataFragment">


    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tvSignIn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/ic_ellipse"
        android:textColor="@color/white"
        android:text="@string/sign_in"
        android:textSize="28sp"
        android:gravity="center"
        android:layout_marginTop="64dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <com.google.android.material.button.MaterialButton
        style="@style/Widget.App.ButtonStyle"
        android:id="@+id/btnDone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_button"
        android:layout_marginBottom="68dp"
        android:layout_marginStart="46dp"
        android:layout_marginEnd="46dp"
        android:textAllCaps="false"
        android:text="@string/done"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        />
    <com.google.android.material.textfield.TextInputLayout
        style="@style/CustomTextInputLayout"
        android:id="@+id/tilFirstName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_marginStart="46dp"
        android:layout_marginEnd="46dp"
        android:hint="@string/first_name"
        app:errorEnabled="true"
        app:errorTextColor="@color/red_field_error"
        app:layout_constraintTop_toBottomOf="@id/tvSignIn"
        >
        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/etFirstName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/white" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/CustomTextInputLayout"
        android:id="@+id/tilLastName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginStart="46dp"
        android:layout_marginEnd="46dp"
        android:hint="@string/last_name"
        app:layout_constraintTop_toBottomOf="@id/tilFirstName"
        >
        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/etLastName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/CustomTextInputLayout"
        android:id="@+id/tilCity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginStart="46dp"
        android:layout_marginEnd="46dp"
        android:hint="@string/city"
        app:layout_constraintTop_toBottomOf="@id/tilLastName"
        >
        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/etCity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            />

    </com.google.android.material.textfield.TextInputLayout>

</androidx.constraintlayout.widget.ConstraintLayout>