<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_marginStart="16dp"
    android:layout_marginEnd="16dp"
    android:background="@drawable/rv_rectangle_grey">

<com.google.android.material.textview.MaterialTextView
    android:id="@+id/tvDialogTitle"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:textSize="24sp"
    android:text="@string/dialog_title"
    android:gravity="center"
    android:textColor="@color/white"
    android:layout_marginTop="34dp"
    android:layout_marginStart="68dp"
    android:layout_marginEnd="68dp"
    android:layout_marginBottom="108dp"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintBottom_toBottomOf="parent" />

 <com.google.android.material.button.MaterialButton
     style="@style/Widget.App.ButtonStyle"
     android:id="@+id/btnNo"
     android:layout_width="144dp"
     android:layout_height="34dp"
     android:background="@drawable/bg_button"
     android:text="@string/no"
     android:textAllCaps="false"
     android:gravity="center"
     android:textColor="@color/white"
     android:layout_marginTop="38dp"
     android:layout_marginStart="30dp"
     app:layout_constraintTop_toBottomOf="@id/tvDialogTitle"
     app:layout_constraintStart_toStartOf="parent" />

 <com.google.android.material.button.MaterialButton
     style="@style/Widget.App.ButtonStyle"
     android:id="@+id/btnYes"
     android:layout_width="144dp"
     android:layout_height="34dp"
     android:background="@drawable/bg_button"
     android:textColor="@color/white"
     android:text="@string/yes"
     android:textAllCaps="false"
     android:gravity="center"
     android:layout_marginTop="38dp"
     android:layout_marginStart="22dp"
     app:layout_constraintTop_toBottomOf="@id/tvDialogTitle"
     app:layout_constraintStart_toEndOf="@id/btnNo" />


</androidx.constraintlayout.widget.ConstraintLayout>