<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/bg_main"
    tools:context=".view.main.bottomnav.SettingsFragment">


      <androidx.cardview.widget.CardView
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      app:cardCornerRadius="100dp"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toTopOf="parent"
          android:layout_marginStart="30dp"
          android:layout_marginTop="40dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            >

    <ImageView
        android:id="@+id/imgProfile"
        android:layout_width="92dp"
        android:layout_height="92dp"
        android:src="@drawable/ic_sneakers_item"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:scaleType="fitXY"
        />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/tvNameUser"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Angela Mayer"
        android:textColor="@color/white"
        android:gravity="center"
        android:textSize="22sp"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginStart="16dp"
        android:layout_marginTop="60dp"
        />
    <com.google.android.material.button.MaterialButton
        style="@style/Widget.App.ButtonStyle"
        android:id="@+id/btnExit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAllCaps="false"
        android:layout_marginStart="42dp"
        android:layout_marginEnd="50dp"
        android:layout_marginTop="160dp"
        android:background="@drawable/bg_button"
        android:textSize="16sp"
        android:text="@string/exit"
        android:textColor="@color/white"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilContactNumber"
        style="@style/Widget.App.TextInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="180dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/tilCitySitting"
        app:layout_constraintTop_toTopOf="parent"
        android:textColorHint="@color/white"
        android:hint="@string/contact_number"
        app:prefixText="@string/number"
        app:prefixTextColor="@color/white">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tiEtContact"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="0502404096"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:focusable="false"
            android:clickable="false"
            android:cursorVisible="false"
            android:backgroundTint="@color/grey_line" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilCitySitting"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/Widget.Design.TextInputLayout"
        android:layout_marginBottom="40dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="274dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:hint="@string/city"
        android:textColorHint="@color/white">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tiEtCitySitting"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Vinnytsia"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:focusable="false"
            android:clickable="false"
            android:cursorVisible="false"
            android:backgroundTint="@color/grey_line"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        style="@style/Widget.App.ButtonStyle"
        android:id="@+id/btnAddPhoto"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:background="@drawable/bg_button"
        android:text="+"
        android:textColor="@color/white"
        android:textSize="24dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="104dp"
        android:layout_marginStart="84dp"

        />


</androidx.constraintlayout.widget.ConstraintLayout>