<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/grey_bottom_filter"
    tools:context=".view.main.bottomsheet.BottomSheetFilterFragment">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilModel"
        style="@style/Widget.App.SpinnerTextInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="52dp"
        android:layout_marginEnd="16dp"
        android:hint="@string/model"
        android:textColorHint="@color/white"
        app:expandedHintEnabled="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:prefixTextColor="@color/white">

        <AutoCompleteTextView
            android:id="@+id/ctvModel"
            android:textAlignment="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:textSize="14sp"
            android:backgroundTint="@color/grey_line"
            android:background="@android:color/transparent"
            tools:listitem="@android:layout/simple_spinner_item"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilMaterial"
        style="@style/Widget.App.SpinnerTextInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="18dp"
        android:layout_marginEnd="16dp"
        android:hint="@string/material"
        android:textColorHint="@color/white"
        app:expandedHintEnabled="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tilModel"
        app:prefixTextColor="@color/white">

        <AutoCompleteTextView
            android:id="@+id/spMaterial"
            android:textAlignment="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/grey_line"
            android:background="@android:color/transparent"
            android:clickable="true"
            android:textColor="@color/white"
            android:textSize="14sp"
            tools:listitem="@android:layout/simple_spinner_item"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilSizeFilter"
        style="@style/Widget.App.SpinnerTextInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="18dp"
        android:layout_marginEnd="16dp"
        android:hint="Розмір"
        android:textColorHint="@color/white"
        app:expandedHintEnabled="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tilMaterial"
        app:prefixTextColor="@color/white">

        <AutoCompleteTextView
            android:id="@+id/spSizeFilter"
            android:textAlignment="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:backgroundTint="@color/grey_line"
            android:clickable="true"
            android:textColor="@color/white"
            android:textSize="18sp"
            tools:listitem="@android:layout/simple_spinner_item"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilPrice"
        style="@style/Widget.Design.TextInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="16dp"
        android:hint="@string/price"
        android:textColorHint="@color/white"
        app:expandedHintEnabled="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tilSizeFilter"
        app:prefixTextColor="@color/white">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tiEtPrice"
            android:layout_width="98dp"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/grey_line"
            android:clickable="true"
            android:textColor="@color/white"
            android:textSize="18sp" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilPrice2"
        style="@style/Widget.Design.TextInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        app:expandedHintEnabled="false"
        app:layout_constraintStart_toEndOf="@id/tilPrice"
        app:layout_constraintTop_toBottomOf="@id/tilSizeFilter"
        app:prefixTextColor="@color/white">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tiEtPrice2"
            android:layout_width="98dp"
            android:layout_marginStart="135dp"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/grey_line"
            android:clickable="true"
            android:textColor="@color/white"
            android:textSize="18sp" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tvThrowOff"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:layout_marginBottom="24dp"
        android:text="@string/throw_off"
        android:textAllCaps="true"
        android:textColor="@color/bg_button_color"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tilPrice" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tvApply"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginTop="28dp"
        android:text="@string/apply"
        android:textAllCaps="true"
        android:textColor="@color/bg_button_color"
        android:textSize="14sp"
        app:layout_constraintStart_toEndOf="@id/tvThrowOff"
        app:layout_constraintTop_toBottomOf="@id/tilPrice" />


</androidx.constraintlayout.widget.ConstraintLayout>