<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_marginTop="10dp"
    android:layout_marginEnd="16dp"
    android:layout_marginStart="16dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    >

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:cardElevation="8dp"
        android:layout_marginEnd="6dp"
        app:cardCornerRadius="10dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/grey_recycle_view"
            android:orientation="vertical">


            <ImageView
                android:id="@+id/imgSneakers"
                android:layout_width="160dp"
                android:layout_height="0dp"
                android:scaleType="fitXY"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:src="@drawable/ic_sneakers_item"
                />

            <TextView
                android:id="@+id/tvNameSneakers"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:textColor="@color/white"
                android:textSize="16sp"
                app:layout_constraintStart_toEndOf="@id/imgSneakers"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="Nike 992K" />

            <TextView
                android:id="@+id/tvFootSizeTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/foot_size"
                android:textColor="@color/white"
                android:textSize="10sp"
                app:layout_constraintStart_toStartOf="@id/tvNameSneakers"
                app:layout_constraintTop_toBottomOf="@id/tvNameSneakers" />

            <ImageView
                android:id="@+id/imgLike"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:src="@drawable/ic_favorite_ads_red"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tvMaterial"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="18dp"
                android:layout_marginBottom="10dp"
                android:text="@string/material"
                android:textColor="@color/grey_material"
                android:textSize="10sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@id/imgSneakers"
                app:layout_constraintTop_toBottomOf="@id/tvSizeTitle" />

            <TextView
                android:id="@+id/tvNameMaterial"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:textColor="@color/grey_material"
                android:textSize="10sp"
                app:layout_constraintStart_toEndOf="@id/tvMaterial"
                app:layout_constraintTop_toTopOf="@id/tvMaterial"
                tools:text="Шкіра" />

            <TextView
                android:id="@+id/tvSize"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:textColor="@color/bg_button_color"
                android:textSize="20dp"
                app:layout_constraintStart_toStartOf="@id/tvFootSizeTitle"
                app:layout_constraintTop_toBottomOf="@id/tvFootSizeTitle"
                tools:text="40" />

            <TextView
                android:id="@+id/tvSizeTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:text="@string/size"
                android:textColor="@color/white"
                android:textSize="10sp"
                app:layout_constraintEnd_toEndOf="@id/tvSize"
                app:layout_constraintStart_toStartOf="@id/tvSize"
                app:layout_constraintTop_toBottomOf="@id/tvSize" />

            <TextView
                android:id="@+id/tvLongTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:text="@string/long_size"
                android:textColor="@color/white"
                android:textSize="10sp"
                app:layout_constraintStart_toEndOf="@id/tvSize"
                app:layout_constraintTop_toTopOf="@id/tvSizeTitle" />

            <TextView
                android:id="@+id/tvLong"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:text="@string/long_size"
                android:textColor="@color/white"
                android:textSize="14sp"
                app:layout_constraintBottom_toTopOf="@id/tvSizeTitle"
                app:layout_constraintEnd_toEndOf="@id/tvLongTitle"
                app:layout_constraintStart_toStartOf="@id/tvLongTitle"
                tools:text="28.5" />

            <TextView
                android:id="@+id/tvWidthTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:text="@string/width_size"
                android:textColor="@color/white"
                android:textSize="10sp"
                app:layout_constraintStart_toEndOf="@id/tvLongTitle"
                app:layout_constraintTop_toTopOf="@id/tvSizeTitle" />

            <TextView
                android:id="@+id/tvWidth"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:text="@string/width_size"
                android:textColor="@color/white"
                android:textSize="14sp"
                app:layout_constraintBottom_toTopOf="@id/tvWidthTitle"
                app:layout_constraintEnd_toEndOf="@id/tvWidthTitle"
                app:layout_constraintStart_toStartOf="@id/tvWidthTitle"
                tools:text="10" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/tvPrice"
        android:layout_width="74dp"
        android:layout_height="30dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/tv_price_yellow"
        android:gravity="center"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:elevation="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="100$" />


</androidx.constraintlayout.widget.ConstraintLayout>